--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
     "manifest_version": 2,
     "name": "SpeedChangerExtension",
     "version": "0.1",
-    "content_scripts":{
-        "matches":["https://web.whatsapp.com/"],
-        "css": ["style.css"],
-        "js": ["content.js"]
-    }
+    "content_scripts": [
+        {
+            "matches":["https://web.whatsapp.com/"],
+            "css": ["style.css"],
+            "js": ["content.js"]
+        }
+    ]
 }
